03_Project/src/test/resources/cocos/invalid/ZeroEdgeWeight.pn
petrinet H2O {

    place H2 initial 2;
    place O2 initial 2;
    place H2O;

    transition t:
        0 <- H2
        1 <- O2
        2 -> H2O
}